# projB

./: CMakeLists.txt
applications/main/: CMakeLists.txt  main.cpp
cmake/: IncludeProjA.cmake
libraries/corelib/: CMakeLists.txt
libraries/corelib/include/: CoreBPrint.h
libraries/corelib/source/: CoreBPrint.cpp
libraries/utilitylib/: CMakeLists.txt
libraries/utilitylib/include/: .gitignore  BVersion.h.in  UtilBPrint.h
libraries/utilitylib/source/: UtilBPrint.cpp
tests/: CMakeLists.txt
